<resources>
    <string name="app_name">一起学安卓</string>

    <string name="nav_home">首页</string>
    <string name="nav_category">知识体系</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="my_star">我的收藏</string>
    <string name="setting">设置</string>
    <string name="about_us">关于我们</string>

    <string name="hot">热门</string>
    <string name="search">搜索</string>

    <string name="double_click_exit">再按一次退出</string>

    <string name="author_prefix">作者：</string>

    <string name="error_message">空空如也...</string>
    <string name="retry">Retry</string>
    <string name="loading">正在加载...</string>

    <string name="title_activity_login">登录</string>
    <string name="user_login">用户登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="no_account">没有账号？去注册</string>
    <string name="user_register">注册用户</string>
    <string name="register_tip">用户注册后才可以登录！</string>
    <string name="enter_password_again">再输入一次密码</string>
    <string name="register">注册</string>
    <string name="go_to_login">去登录</string>
    <string name="login_success">登录成功</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_category_detail">CategoryDetailActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="username_not_empty">用户名不能为空</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="nav_logout">退出登录</string>
    <string name="logout_success">已退出登录</string>
    <string name="confirm_logout">确认退出登录？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="my_score">我的积分</string>
    <string name="login_tint">请先登录</string>
    <string name="score_no">--</string>
    <string name="level_no">当前等级：--</string>
    <string name="level">当前等级：</string>
    <string name="rank_no">当前排名：--</string>
    <string name="rank">当前排名：</string>
    <string name="share_user">分享人：</string>

</resources>
